# Real-Strategy-Game-Upatras

./: .gitignore  1.docx  CMakeLists.txt  ~$1.docx
assets/buildings/: stylized_bridge_low_poly.glb
assets/config/: lan_peer.txt
assets/evilbuildings/: Demo_Scene.c4d  Demo_Scene.mtl  altar.glb  hut.fbx  smithy.fbx
assets/models/: Rock.mtl  Tree.mtl
assets/shaders/: fog.vert  ghost.frag  ghost.vert  preview.frag  preview.vert  selection.frag  selection.vert  shadow_depth.frag  shadow_depth.vert  simple.frag  simple.vert  terrain.frag  terrain.vert  ui.frag  ui.vert  water.frag  water.vert
assets/units/: archer_version_3.glb  knight.glb
common/: FastNoiseLite.h  Model.cpp  Model.h  Noise.h  Shader.cpp  Shader.h  ShadowMap.h  Texture.cpp  Texture.h
src/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  Terrain.cpp  Terrain.h  main.cpp
src/audio/: SoundManager.cpp  SoundManager.h
src/core/: Camera.cpp  Camera.h  Scene.h  SceneConstants.h  Scene_Depth.cpp  Scene_Events.cpp  Scene_Init.cpp  Scene_Pathfinding.cpp  Scene_Procedural.cpp  Scene_Renderer.cpp  Scene_UI.cpp  Scene_Water.cpp
src/game/: Archer.cpp  Archer.h  Barracks.h  EntityType.h  GameEntity.cpp  Knight.h  Resources.h  TownCenter.h  Worker.cpp  Worker.h
src/game/buildings/: Barracks.cpp  Barracks.h  Bridge.h  Farm.cpp  Farm.h  House.cpp  House.h  Market.cpp  Market.h  Storage.cpp  Storage.h  TownCenter.cpp  TownCenter.h
src/game/data/: EntityType.h  Resources.h
src/game/entities/: Building.cpp  Building.h  GameEntity.cpp  GameEntity.h  Unit.cpp  Unit.h
src/game/managers/: BuildingManager.cpp  BuildingManager.h  UnitManager.cpp  UnitManager.h
src/game/units/: Archer.cpp  Archer.h  Knight.cpp  Knight.h  Worker.cpp  Worker.h
src/gui/: UIButton.cpp  UIButton.h  UIManager.cpp  UIManager.h
src/network/: NetworkSession.cpp  NetworkSession.h
src/raycast/: Raycaster.cpp  Raycaster.h
